@@ -1,0 +1,8 @@
+{
+    "tests" : [
+        {
+            "filename" : "main.cpp",
+            "has_fixits" : true
+        }
+    ]
+}
