@@ -1,0 +1,2 @@
+sanitize-inline-keyword/main.cpp:5:5: warning: c(): the 'inline' keyword is specified on the definition, but not the declaration. This could lead to hard-to-suppress warnings with some compilers (e.g. MinGW). The 'inline' keyword should be used for the declaration only. [-Wclazy-sanitize-inline-keyword]
+sanitize-inline-keyword/main.cpp:6:5: warning: d(): the 'inline' keyword is specified on the definition, but not the declaration. This could lead to hard-to-suppress warnings with some compilers (e.g. MinGW). The 'inline' keyword should be used for the declaration only. [-Wclazy-sanitize-inline-keyword]
