@@ -3,6 +3,7 @@
 * v1.12 (TBD)
     - New Checks:
       - qt-keyword-emit
+      - sanitize-inline-keyword
 
 * v1.11 (January 21st 2022)
     - New Checks:
